#add_subdirectory(core)
#add_subdirectory(database)
#add_subdirectory(dataobjects)
#add_subdirectory(datastore)
#add_subdirectory(dbobjects)
#add_subdirectory(gearbox)
add_subdirectory(geometry)
#add_subdirectory(logging)
#add_subdirectory(particledb)
add_subdirectory(pcore)
add_subdirectory(utilities)
